meta/src/optimizer/snapshots/pest_meta__optimizer__tests__concat_strings.snap
---
source: meta/src/optimizer/mod.rs
expression: optimize(rules)
---
[
    OptimizedRule {
        name: "rule",
        ty: Atomic,
        expr: Str(
            "abcd",
        ),
    },
]
