meta/src/optimizer/snapshots/pest_meta__optimizer__tests__impossible_common_sequence.snap
---
source: meta/src/optimizer/mod.rs
expression: optimize(rules)
---
[
    OptimizedRule {
        name: "rule",
        ty: Silent,
        expr: Ident(
            "a",
        ),
    },
]
