meta/src/optimizer/snapshots/pest_meta__optimizer__tests__lister.snap
---
source: meta/src/optimizer/mod.rs
expression: optimize(rules)
---
[
    OptimizedRule {
        name: "rule",
        ty: Silent,
        expr: Seq(
            Ident(
                "a",
            ),
            Rep(
                Seq(
                    Ident(
                        "b",
                    ),
                    Ident(
                        "a",
                    ),
                ),
            ),
        ),
    },
]
