meta/src/optimizer/snapshots/pest_meta__optimizer__tests__long_common_sequence.snap
---
source: meta/src/optimizer/mod.rs
expression: optimize(rules)
---
[
    OptimizedRule {
        name: "rule",
        ty: Silent,
        expr: Seq(
            Ident(
                "a",
            ),
            Seq(
                Ident(
                    "b",
                ),
                Choice(
                    Ident(
                        "c",
                    ),
                    Ident(
                        "d",
                    ),
                ),
            ),
        ),
    },
]
