meta/src/optimizer/snapshots/pest_meta__optimizer__tests__rotate.snap
---
source: meta/src/optimizer/mod.rs
expression: optimize(rules)
---
[
    OptimizedRule {
        name: "rule",
        ty: Normal,
        expr: Choice(
            Str(
                "a",
            ),
            Choice(
                Str(
                    "b",
                ),
                Choice(
                    Str(
                        "c",
                    ),
                    Str(
                        "d",
                    ),
                ),
            ),
        ),
    },
]
