meta/src/optimizer/snapshots/pest_meta__optimizer__tests__unroll_loop_exact.snap
---
source: meta/src/optimizer/mod.rs
expression: optimize(rules)
---
[
    OptimizedRule {
        name: "rule",
        ty: Atomic,
        expr: Seq(
            Ident(
                "a",
            ),
            Seq(
                Ident(
                    "a",
                ),
                Ident(
                    "a",
                ),
            ),
        ),
    },
]
