meta/src/optimizer/snapshots/pest_meta__optimizer__tests__unroll_loop_max.snap
---
source: meta/src/optimizer/mod.rs
expression: optimize(rules)
---
[
    OptimizedRule {
        name: "rule",
        ty: Atomic,
        expr: Seq(
            Opt(
                Str(
                    "a",
                ),
            ),
            Seq(
                Opt(
                    Str(
                        "a",
                    ),
                ),
                Opt(
                    Str(
                        "a",
                    ),
                ),
            ),
        ),
    },
]
