meta/src/optimizer/snapshots/pest_meta__optimizer__tests__unroll_loop_min.snap
---
source: meta/src/optimizer/mod.rs
expression: optimize(rules)
---
[
    OptimizedRule {
        name: "rule",
        ty: Atomic,
        expr: Seq(
            Str(
                "a",
            ),
            Seq(
                Str(
                    "a",
                ),
                Rep(
                    Str(
                        "a",
                    ),
                ),
            ),
        ),
    },
]
